# cosmopot

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_CHECKLIST.md  LOAD_TESTING_SUMMARY.md  Makefile  README.md  REFERRAL_IMPLEMENTATION_SUMMARY.md  SECURITY_IMPLEMENTATION.md  STRIPE_INTEGRATION_SUMMARY.md  alembic.ini  coverage-backend.xml  docker-compose.yml  et  mypy_full_output.txt  mypy_output.txt  pyproject.toml  tatus --porcelain  test_metadata_check.py
.github/: BRANCH_PROTECTION.md  CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml  docker.yml  load-testing.yml  release.yml  semantic-pr.yml  task-runner.yml
apps/backend/: Dockerfile  alembic.ini
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 0001_initial.py
apps/backend/tests/: conftest.py  test_admin_api.py  test_analytics_aggregation.py  test_analytics_api.py  test_analytics_service.py  test_auth_endpoints.py  test_auth_passwords.py  test_auth_tokens.py  test_bot_api.py  test_encryption.py  test_gdpr.py  test_generation_api.py  test_generation_models.py  test_generation_routes.py  test_health.py  test_observability_metrics.py  test_payment_models.py  test_payments.py  test_prompts_api.py  test_rate_limiting.py  test_referral_integration.py  test_referrals.py  test_referrals_api.py  test_sentry_integration.py  test_stripe_payments.py  test_synthetic_monitoring.py  test_task_websocket.py  test_telegram_auth.py  test_user_api.py
apps/bot/: Dockerfile
apps/bot/tests/: conftest.py  test_auth_gateway.py  test_handlers.py  test_webhook.py
backend/: Dockerfile  requirements.txt
backend/app/: celery_app.py  config.py  constants.py  db.py  main.py  tasks.py
backend/app/worker/: __init__.py  banana.py  bootstrap.py  config.py  db.py  images.py  logging.py  processor.py  redis_events.py  storage.py
deploy/: AUTOSCALING_STRATEGY.md  BACKUP_RESTORE_PROCEDURES.md  DEPLOYMENT_RUNBOOK.md  IMPLEMENTATION_SUMMARY.md  README.md  TROUBLESHOOTING_GUIDE.md  ZERO_DOWNTIME_DEPLOYMENT.md  docker-compose.prod.yml
deploy/alertmanager/: alertmanager.yml
deploy/grafana/: dashboards.yml  datasources.yml
deploy/grafana/dashboards/: api-performance.json  business-kpis.json  infrastructure.json
deploy/nginx/: nginx.prod.conf
deploy/postgres/: init.sql
deploy/prometheus/: prometheus.prod.yml
deploy/prometheus/rules/: alerts.yml
deploy/scripts/: autoscale.sh  backup.sh  deploy-observability.sh  deploy.sh  restore.sh
docs/: ANALYTICS_DASHBOARD.md  ANALYTICS_IMPLEMENTATION.md  LOAD_TESTING.md  LOAD_TESTING_CHECKLIST.md  LOAD_TESTING_INDEX.md  LOAD_TESTING_OPS_GUIDE.md  LOAD_TESTING_QUICKSTART.md  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  OBSERVABILITY_QUICKSTART.md  OBSERVABILITY_STACK.md  PERFORMANCE_BASELINES.md  REFERRAL_MODULE.md  SECURITY_BASELINE.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_OPS_GUIDE.md  SECURITY_QUICKSTART.md  STRIPE_INTEGRATION.md  ci-pipeline.md  finance_domain.md  user_domain.md
frontend/: .dockerignore  Dockerfile  nginx.conf  requirements.txt
frontend/app/: __init__.py  gateway.py  main.py
frontend/app/templates/: base.html  generate.html  history.html  home.html  login.html  pricing.html  profile.html
frontend/spa/: .env.development  .env.example  .eslintignore  .eslintrc.cjs  .prettierrc.cjs  .stylelintrc.cjs  README.md  index.html  openapi.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.cjs  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/spa/src/: App.vue  main.ts
load_tests/: README.md  __init__.py  config.py  conftest.py  data_seeder.py  locustfile.py  report_generator.py  requirements.txt  test_utils.py  utils.py
migrations/: env.py
migrations/versions/: 0001_create_user_domain.py  0002_create_billing_domain.py  0003_create_generation_tasks.py  0004_add_unique_constraint_to_subscriptions.py  0005_add_prompts_version_and_missing_columns.py  0006_add_prompt_latest_index.py  0007_create_referral_domain.py  0008_add_stripe_payment_provider.py  0009_update_generation_task_status_enum.py  add_analytics_tables.py
nginx/: generate-certs.sh  nginx.conf
prometheus/: prometheus.yml
scripts/: connectivity_check.py  run_load_tests.sh  task_runner_setup.sh  validate-observability.sh
sentry/relay/: credentials.json  run.sh
src/bot/: __init__.py  callbacks.py  commands.py  config.py  constants.py  exceptions.py  fsm.py  handlers.py  keyboards.py  models.py  services.py  validators.py
src/common/: __init__.py
src/common/sqlalchemy/: __init__.py  metadata_mixin.py
src/user_service/: __init__.py  database.py  enums.py  models.py  repository.py  schemas.py  services.py
tests/: conftest.py  factories.py  test_billing.py  test_duplicate_indices.py  test_generation_tasks.py  test_metadata_mixin.py  test_prompts.py  test_user_repository.py  test_user_repository_prompts.py
tests/bot/: test_commands.py  test_handlers.py  test_keyboards.py  test_services.py  test_validators.py
tests/frontend/: test_frontend_app.py
tests/worker/: REMOVED_TESTS.md  test_banana_client.py  test_images.py
worker/: Dockerfile  entrypoint.sh  requirements.txt
(+143 files in other folders)
